--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    background-color: blue;
-
+}
+#birth{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
