--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 .submitForm{
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     flex-direction: column;
+    margin: 100px;
 }
 #birth{
-    width: 100%;
-    display: flex;
+    display:flex;
     flex-direction: column;
+    /* padding: 50px; */
+   
 }
