create a license file

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
  
 }
 
-
 form{
     width: 300px;
     margin-top: 180px;
@@ -25,9 +24,9 @@ div h1{
     text-align: center;
     font-weight: 700;
 }
-div h1 p{
-    padding: 20px;
-}
+/* div  p{
+    padding: 20px; */
+/* } */
 form select{
     margin: 20px;
     /* width: fit-content; */
